--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </div>
         </div>
 
-        <script src="assets/app.js" type="text/javascript" charset="utf-8"></script>
+        <script src="RakshitKashyap.github.io/assets/app.js" type="text/javascript" charset="utf-8"></script>
 
     </body>
 </html>
