--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
     <head>
         <title>To Do List</title>
         <meta charset="utf-8">
@@ -106,7 +106,7 @@
             </div>
         </div>
 
-        <script src="RakshitKashyap.github.io/assets/app.js" type="text/javascript" charset="utf-8"></script>
+        <script src="assets/app.js" type="text/javascript" charset="utf-8"></script>
 
     </body>
 </html>
