--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                             <div class="p-1 my-1">
                                                 <div class="input-group">
                                                     <span class="input-group-text">Task Id</span>
-                                                    <input id="taskId" type="number" class="form-control" placeholder="Task Id">
+                                                    <input id="taskId" type="number" class="form-control" placeholder="Task Id" disabled>
                                                 </div>
                                             </div>
                                             <div class="p-1 my-1">
