--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="tab-content mt-3" id="v-pills-tabContent">
                 <!-- common things to be specified here -->
                 
-                <table class="table" id="table">
+                <table class="table table-hover" id="table">
                     <thead>
                         <tr>
                             <th>Task Id</th>
