--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
                 <!-- common things to be specified here -->
                 
-                <table class="table" id="table">
+                <table class="table table-hover" id="table">
                     <thead>
                         <tr>
                             <th>Task Id</th>
@@ -62,7 +62,7 @@
                                             <div class="p-1 my-1">
                                                 <div class="input-group">
                                                     <span class="input-group-text">Task Id</span>
-                                                    <input id="taskId" type="number" class="form-control" placeholder="Task Id">
+                                                    <input id="taskId" type="number" disabled class="form-control" placeholder="Task Id">
                                                 </div>
                                             </div>
                                             <div class="p-1 my-1">
